--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
